# efsec

./: .gitignore  .gitmodules  .npmignore  EFCHAT_INTEGRATION_EXAMPLE.md  IMPORT_RULES.md  INTEGRATION.md  MOBILE_COMPATIBILITY.md  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  SENDER_KEYS_FIX.md  biome.json  go.mod  go.sum  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: build-and-publish.yml  publish.yml  release.yml
backend/cmd/server/: main.go
backend/handlers/: dm.go  groups.go  keys.go  spaces.go
backend/integration/: efchat.go
backend/middleware/: auth.go
backend/models/: dm.go  groups.go  keys.go  spaces.go
backend/storage/: interface.go
backend/storage/postgres/: dm.go  groups.go  migrations.go  spaces.go  store.go
backend/storage/redis/: dm.go
client/: .eslintignore  .gitignore  .prettierignore  bunfig.toml  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
client/efsec-wasm/: Cargo.toml
client/src/: index.ts
client/src/__tests__/: crypto.test.ts  integration.test.ts  security.test.ts  validation.test.ts
client/src/components/: DMInitiator.tsx  E2EIndicator.tsx  E2ELockIcon.tsx  E2EProvider.tsx  index.ts  (+2 more)
efsec-wasm/: Cargo.toml  clippy.toml  rustfmt.toml
efsec-wasm/src/: lib.rs
src/: index.ts
src/crypto/: double-ratchet.ts  error-sanitizer.ts  keys.ts  megolm.ts  rolling-conversation-id.ts  types.ts  vodozemac.ts  wasm.ts  x3dh.ts
src/storage/: indexed-db.ts
src/wasm/: vodozemac.ts
tests/: crypto.test.ts  setup.ts
vodozemac/efsec-wasm/: Cargo.toml
(+17 files in other folders)
