[package]
name = "efsec-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
vodozemac = { path = "../vodozemac", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
]