# Copyright (C) 2025 efchat.net
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

[package]
name = "efsec-wasm"
version = "0.1.0"
edition = "2021"
description = "EfSec WebAssembly bindings for Double Ratchet and Megolm protocols"
license = "GPL-3.0-or-later"
repository = "https://github.com/efchatnet/efsec"

[lib]
crate-type = ["cdylib"]

[dependencies]
vodozemac = { path = "../vodozemac" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"